# AgentMagnet

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  ESTRATEGIA.md  LICENSE  PyPI-Recovery-Codes-egri-2026-06-02T22_19_49.669206.txt  README.md  REGISTER.md  claude_desktop_config.json  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.py  ssh-key-2026-06-02.key  ssh-key-2026-06-02.key.pub  test_agentmagnet.py  test_http_server.py
agentmagnet/: __init__.py  __main__.py  config.py  http_server.py  localize.py  server.py
agentmagnet/affiliates/: __init__.py  aliexpress.py  amazon.py  awin.py  b2b.py  base.py  ebay.py  saas.py  universal_link.py
agentmagnet/integrations/: autogen_tool.py  crewai_tool.py  google_adapter.py  langchain_tool.py
agentmagnet/propagation/: __init__.py  directories.py  openai_gpt_action.json  sdk.py
agentmagnet/store/: db.py
agentmagnet/tools/: __init__.py  agent_cashback.py  agent_commerce.py  agent_credits.py  (+28 more)
extension/: content.css  content.js  manifest.json  popup.html  popup.js
scripts/: awin.user.js  awin_autojoin.user.js  awin_console_join.txt  awin_dashboard.html  awin_programme_shopping_list.py  check_404.py  check_fields.py  check_session.py  find_best_awin.py  find_join_api.py  find_join_api2.py  find_join_endpoint.py  find_js_bundle.py  follow_redirect.py  investigate_redirect.py  join_awin_all.py  join_awin_cdp.py  join_awin_headless.py  join_awin_playwright.py  register_everywhere.py  test_awin.py  try_awin1_join.py  try_csrf.py  try_join.py  try_ui_gateway.py  verify_joins.py  verify_joins_detail.py
